--- a/mystyle.css
+++ b/mystyle.css
@@ -7,3 +7,13 @@ color: yellowgreen
 font-weight: bold;
 font-size: 24px;
 }
+
+.container {
+    border: 10px solid indigo;
+    padding: 10px;
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+    /* margin: margin-top margin-right margin-bottom margin-left */
+    margin: 0 auto 0 auto;
+}
