--- a/mystyle.css
+++ b/mystyle.css
@@ -1,3 +1,10 @@
+body{
+    background-color: #eee;
+}
+
+h1, h2 {
+text-align: center;
+}
 
 #title-part{
 color: yellowgreen
@@ -9,11 +16,15 @@ font-size: 24px;
 }
 
 .container {
+    background-color: white;
     border: 10px solid indigo;
     padding: 10px;
     max-width: 800px;
-    margin-left: auto;
-    margin-right: auto;
+    /* margin-left: auto;
+    margin-right: auto; */
     /* margin: margin-top margin-right margin-bottom margin-left */
-    margin: 0 auto 0 auto;
+    /* margin: 0 auto 0 auto; */
+    margin: 0 auto;
+    box-shadow: 10px 10px 20px
+    rgba(0, 0, 0, 0.3);
 }
