--- a/mystyle.css
+++ b/mystyle.css
@@ -2,6 +2,10 @@ body{
     background-color: #eee;
 }
 
+h1 {
+    font-size: 35px;
+}
+
 h1, h2 {
 text-align: center;
 }
@@ -27,4 +31,12 @@ font-size: 24px;
     margin: 0 auto;
     box-shadow: 10px 10px 20px
     rgba(0, 0, 0, 0.3);
+}
+
+table{
+    border-collapse: collapse;
+}
+
+th, td {
+    border: 1px solid grey;
 }
