--- a/mystyle.css
+++ b/mystyle.css
@@ -37,6 +37,16 @@ table{
     border-collapse: collapse;
 }
 
+th {
+    background-color: #ddd;
+    text-align: center;
+}
+
+td {
+    padding: 5px 10px;
+    text-align: center;
+}
+
 th, td {
     border: 1px solid grey;
 }
